--- a/client/src/components/cards/AddCard/AddCard.module.scss
+++ b/client/src/components/cards/AddCard/AddCard.module.scss
@@ -365,4 +365,20 @@
     vertical-align: top;
   }
 
+  .selectedLabels {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4px;
+    margin-top: 8px;
+    padding-left: 0;
+  }
+
+  .selectedLabel {
+    display: inline-block;
+    line-height: 0;
+    margin: 0;
+    max-width: 100%;
+    vertical-align: top;
+  }
+
 }
