--- a/client/src/components/boards/Boards/Boards.module.scss
+++ b/client/src/components/boards/Boards/Boards.module.scss
@@ -17,7 +17,7 @@
 
   .tabs {
     display: flex;
-    height: 38px;
+    height: 50px; // reduzido para diminuir espaço vazio
     flex: 0 0 auto;
     white-space: nowrap;
   }
@@ -25,7 +25,7 @@
   .tabsWrapper {
     display: flex;
     flex: 0 0 auto;
-    height: 56px;
+    height: 58px;
     overflow-x: auto;
     overflow-y: hidden;
 
@@ -35,7 +35,7 @@
     }
 
     &:hover {
-      height: 38px;
+      height: 50px;
     }
 
     &::-webkit-scrollbar {
@@ -56,7 +56,8 @@
     display: flex;
     flex: 1 1 auto;
     flex-direction: column;
-    height: 38px;
-    overflow: hidden;
+    height: 50px; // reduzido
+    overflow: visible; // permitir que a barra de progresso seja totalmente visível
+    padding-bottom: 4px; // ligeiramente menor
   }
 }
